updated urls. Removed overflow property preventing scroll

--- a/app/styles/_landing.scss
+++ b/app/styles/_landing.scss
@@ -1,5 +1,5 @@
 body{
-	overflow:hidden;
+
 	box-sizing: border-box;
 }
 
